✨ #4 Custom type for Class type;
Also adding CLASS_NAME() function